--- a/week_3/Untitled1.ipynb
+++ b/week_3/Untitled1.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "d91da398",
    "metadata": {},
    "outputs": [
@@ -47,13 +47,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "First numbers: 4\n",
-      "Second number: 5\n",
-      "Third number: 5\n",
-      "Fourth number: 6\n",
-      "The first  is:  -1.25\n",
-      "The second  is:  1.25\n",
-      "The third  is:  -1.5\n"
+      "First number: 6\n",
+      "Second number: 7\n",
+      "Third number: 8\n",
+      "Fourth number: 9\n",
+      "The first value is: -1.1666666666666667\n",
+      "The second value is: 1.3333333333333333\n",
+      "The third value is: -1.5\n"
      ]
     },
     {
@@ -63,7 +63,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[12], line 17\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28mprint\u001b[39m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe third  is: \u001b[39m\u001b[38;5;124m\"\u001b[39m,X)\n\u001b[0;32m     16\u001b[0m J \u001b[38;5;241m=\u001b[39m (Y\u001b[38;5;241m+\u001b[39mE\u001b[38;5;241m+\u001b[39mX)\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m\n\u001b[1;32m---> 17\u001b[0m R1 \u001b[38;5;241m=\u001b[39m \u001b[43mmath\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msqrt\u001b[49m\u001b[43m(\u001b[49m\u001b[43mJ\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;28mprint\u001b[39m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mR1\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[2], line 17\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe third value is:\u001b[39m\u001b[38;5;124m\"\u001b[39m, X)\n\u001b[0;32m     16\u001b[0m J \u001b[38;5;241m=\u001b[39m (Y \u001b[38;5;241m+\u001b[39m E \u001b[38;5;241m+\u001b[39m X) \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m2\u001b[39m\n\u001b[1;32m---> 17\u001b[0m R1 \u001b[38;5;241m=\u001b[39m \u001b[43mmath\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msqrt\u001b[49m\u001b[43m(\u001b[49m\u001b[43mJ\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     19\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mR1 is:\u001b[39m\u001b[38;5;124m\"\u001b[39m, R1)\n",
       "\u001b[1;31mValueError\u001b[0m: math domain error"
      ]
     }
@@ -71,24 +71,24 @@
    "source": [
     "import math\n",
     "\n",
-    "A  = float(input(\"First numbers: \"))\n",
-    "B  = float(input(\"Second number: \"))\n",
-    "C  = float(input(\"Third number: \"))\n",
-    "D  = float(input(\"Fourth number: \"))\n",
+    "A = float(input(\"First number: \"))\n",
+    "B = float(input(\"Second number: \"))\n",
+    "C = float(input(\"Third number: \"))\n",
+    "D = float(input(\"Fourth number: \"))\n",
     "\n",
-    "Y = -B/A\n",
-    "E =  C/A\n",
-    "X = -D/A\n",
+    "Y = -B / A\n",
+    "E = C / A\n",
+    "X = -D / A\n",
     "\n",
-    "print (\"The first  is: \",Y)\n",
-    "print (\"The second  is: \",E)\n",
-    "print (\"The third  is: \",X)\n",
+    "print(\"The first value is:\", Y)\n",
+    "print(\"The second value is:\", E)\n",
+    "print(\"The third value is:\", X)\n",
     "\n",
-    "J = (Y+E+X)/2\n",
+    "J = (Y + E + X) / 2\n",
     "R1 = math.sqrt(J)\n",
     "\n",
-    "\n",
-    "print (\"R1\")\n"
+    "print(\"R1 is:\", R1)\n",
+    "\n"
    ]
   },
   {
