--- a/WEEK_9/Week 9 - Object Oriented Programming Practice.ipynb
+++ b/WEEK_9/Week 9 - Object Oriented Programming Practice.ipynb
@@ -360,18 +360,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Person.__init__() takes 2 positional arguments but 3 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 14\u001b[0m\n\u001b[0;32m     10\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHello, my name is\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnames)\n\u001b[0;32m     12\u001b[0m \u001b[38;5;66;03m# Creating different objects\u001b[39;00m\n\u001b[1;32m---> 14\u001b[0m p1 \u001b[38;5;241m=\u001b[39m \u001b[43mPerson\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mEnobasi\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m17\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     15\u001b[0m p2 \u001b[38;5;241m=\u001b[39m Person(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLeela\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m19\u001b[39m)\n\u001b[0;32m     16\u001b[0m p3 \u001b[38;5;241m=\u001b[39m Person(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDivine\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m18\u001b[39m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: Person.__init__() takes 2 positional arguments but 3 were given"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, my name is Enobasi\n",
+      "Hello, my name is Leela\n",
+      "Hello, my name is Divine\n"
      ]
     }
    ],
@@ -385,13 +383,13 @@
     "\n",
     "    # Method\n",
     "    def say_hi(self):\n",
-    "        print('Hello, my name is', self.names)\n",
+    "        print('Hello, my name is', self.name)\n",
     "\n",
     "# Creating different objects\n",
     "\n",
-    "p1 = Person('Enobasi', 17)\n",
-    "p2 = Person('Leela', 19)\n",
-    "p3 = Person('Divine', 18)\n",
+    "p1 = Person('Enobasi')\n",
+    "p2 = Person('Leela')\n",
+    "p3 = Person('Divine')\n",
     "\n",
     "p1.say_hi()\n",
     "p2.say_hi()\n",
@@ -601,9 +599,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'bread' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 20\u001b[0m\n\u001b[0;32m     17\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolor \u001b[38;5;241m=\u001b[39m color\n\u001b[0;32m     19\u001b[0m \u001b[38;5;66;03m# Objects of Dog class\u001b[39;00m\n\u001b[1;32m---> 20\u001b[0m Rodger \u001b[38;5;241m=\u001b[39m \u001b[43mDog\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mPug\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mbrown\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     21\u001b[0m Buzo \u001b[38;5;241m=\u001b[39m Dogs(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBulldog\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mblack\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     23\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRodger details:\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[3], line 16\u001b[0m, in \u001b[0;36mDog.__init__\u001b[1;34m(self, breed, color)\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, breed, color):\n\u001b[0;32m     14\u001b[0m \n\u001b[0;32m     15\u001b[0m     \u001b[38;5;66;03m# Instance Variable\u001b[39;00m\n\u001b[1;32m---> 16\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbreed \u001b[38;5;241m=\u001b[39m \u001b[43mbread\u001b[49m\n\u001b[0;32m     17\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolor \u001b[38;5;241m=\u001b[39m color\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'bread' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# A Python program to show that the variables with a value\n",
     "# assigned in the class declaration, are class variables and\n",
@@ -729,6 +740,210 @@
     "Develop the python program using your knowledge in OOP, that tells a user how much to pay, based on their location, and package weight. \n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Title: Neme\n",
+      "Name(Firstname Lastname): Sall\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "string index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[29], line 34\u001b[0m\n\u001b[0;32m     32\u001b[0m employees \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mName(Firstname Lastname): \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     33\u001b[0m a \u001b[38;5;241m=\u001b[39m Employees(employees, tasks, nameof_ppl)\n\u001b[1;32m---> 34\u001b[0m \u001b[43ma\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheck_employee\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnumber\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtitle\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[29], line 13\u001b[0m, in \u001b[0;36mEmployees.check_employee\u001b[1;34m(self, number, title)\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtitle \u001b[38;5;241m=\u001b[39m title\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(nameof_ppl)):\n\u001b[1;32m---> 13\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnameofppl \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43memployees\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m:\n\u001b[0;32m     14\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnumber \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnumber \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     15\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAccess granted\u001b[39m\u001b[38;5;124m'\u001b[39m);\n",
+      "\u001b[1;31mIndexError\u001b[0m: string index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "import random as rd\n",
+    "\n",
+    "\n",
+    "class Employees():\n",
+    "    def __init__(self, employees, tasks, nameof_ppl):\n",
+    "        self.employees = employees\n",
+    "        self.task = tasks\n",
+    "        self.nameofppl = nameof_ppl\n",
+    "    def check_employee(self, number, title):\n",
+    "        self.number = number\n",
+    "        self.title = title\n",
+    "        for i in range(len(nameof_ppl)):\n",
+    "            if self.nameofppl == self.employees[i]:\n",
+    "                self.number = self.number + 1\n",
+    "                print('Access granted');\n",
+    "                a.take_attendance()\n",
+    "                print('Good Day {}. {}'.format(self.title, self.nameof_ppl))\n",
+    "                a.assign_task()\n",
+    "        if self.number < 1:\n",
+    "            a.refuse_access()\n",
+    "    def assign_task(self):\n",
+    "        task = self.task[rd.randit(0, len(self.task)- 1)]\n",
+    "        print('Task for today : {}'.format(task))\n",
+    "    def refuse_access(self):\n",
+    "        print('Access Denied!\\nName Not found')\n",
+    "    \n",
+    "                \n",
+    "number = 0\n",
+    "nameof_ppl =[\"Mary Evans\", \"Eyo Ishan\", \"Durojaiye Dare\", \"Adams Ali\", \"Andrew Ugwu\", \"Stella Mankinde\", \"Jane Akibo\", \"Ago James\", \"Michell Taiwo\", \"Abraham Jones\" , \"Nicole Anide\", \"Kosi Korso\", \"Adele Martins\", \"Emmanuel Ojo\", \"Ajayi Fatima\"]\n",
+    "tasks = [ \"Loading\", \"Transporting\", \"Reveiwing Orders\", \"Customer Service\", \"Delivering Items\"]\n",
+    "title = input(\"Title: \")\n",
+    "employees = input(\"Name(Firstname Lastname): \")\n",
+    "a = Employees(employees, tasks, nameof_ppl)\n",
+    "a.check_employee(number, title)\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a name:Jane Akibo \n",
+      "Access denied. Employee does not exist.\n"
+     ]
+    }
+   ],
+   "source": [
+    "class DeliveryBusiness:\n",
+    "    def __init__(self):\n",
+    "        self.employees = [\n",
+    "            \"Mary Evans\", \"Eyo Ishan\", \"Durojaiye Dare\", \"Adams Ali\", \"Andrew Ugwu\",\n",
+    "            \"Stella Mankinde\", \"Jane Akibo\", \"Ago James\", \"Michell Taiwo\", \"Abraham Jones\",\n",
+    "            \"Nicole Anide\", \"Kosi Korso\", \"Adele Martins\", \"Emmanuel Ojo\", \"Ajayi Fatima\"\n",
+    "        ]\n",
+    "        self.attendance = {}\n",
+    "\n",
+    "    def check_employee_existence(self, employee_name):\n",
+    "        if employee_name in self.employees:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "\n",
+    "    def take_attendance(self, employee_name):\n",
+    "        self.attendance[employee_name] = True\n",
+    "\n",
+    "    def assign_task(self, employee_name, task):\n",
+    "        if employee_name in self.attendance:\n",
+    "            print(f\"Task assigned to {employee_name}: {task}\")\n",
+    "        else:\n",
+    "            print(\"Access denied. Please check your attendance.\")\n",
+    "\n",
+    "# Example usage\n",
+    "business = DeliveryBusiness()\n",
+    "\n",
+    "# Check employee existence\n",
+    "employee_name = input(\"Enter a name:\")\n",
+    "if business.check_employee_existence(employee_name):\n",
+    "    business.take_attendance(employee_name)\n",
+    "    business.assign_task(employee_name, \"Loading\")\n",
+    "else:\n",
+    "    print(\"Access denied. Employee does not exist.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Is Mary Evans present? (yes/no): no\n",
+      "Is Eyo Ishan present? (yes/no): no\n",
+      "Is Durojaiye Dare present? (yes/no): no\n",
+      "Is Adams Ali present? (yes/no): no\n",
+      "Is Andrew Ugwu present? (yes/no): ye\n",
+      "Is Stella Mankinde present? (yes/no): ye\n",
+      "Is Jane Akibo present? (yes/no): yes\n",
+      "Is Ago James present? (yes/no): yes\n",
+      "Is Michell Taiwo present? (yes/no): yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "Employees = [\"Mary Evans\", \"Eyo Ishan\", \"Durojaiye Dare\", \"Adams Ali\", \"Andrew Ugwu\", \"Stella Mankinde\", \"Jane Akibo\", \"Ago James\", \"Michell Taiwo\", \"Abraham Jones\", \"Nicole Anide\", \"Kosi Korso\", \"Adele Martins\", \"Emmanuel Ojo\", \"Ajayi Fatima\"]\n",
+    "\n",
+    "attendance_record = {}\n",
+    "\n",
+    "def take_attendance():\n",
+    "    for employee in Employees:\n",
+    "        status = input(f\"Is {employee} present? (yes/no): \")\n",
+    "        attendance_record[employee] = status.lower() == \"yes\"\n",
+    "\n",
+    "def print_attendance():\n",
+    "    print(\"\\nAttendance Record:\")\n",
+    "    for employee, status in attendance_record.items():\n",
+    "        presence = \"Present\" if status else \"Absent\"\n",
+    "        print(f\"{employee}: {presence}\")\n",
+    "\n",
+    "take_attendance()\n",
+    "print_attendance()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Employees:\n",
+    "    def __init__(self, employees, tasks, attendance):\n",
+    "        self.employees = employees\n",
+    "        self.tasks = tasks\n",
+    "        self.attendance = attendance\n",
+    "\n",
+    "    def check_employee(self, name):\n",
+    "        if name in self.employees:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "\n",
+    "\n",
+    "\n",
+    "employees_list = [\"Mary Evans\", \"Eyo Ishan\", \"Durojaiye Dare\", \"Adams Ali\", \"Andrew Ugwu\", \"Stella Mankinde\",\n",
+    "                  \"Jane Akibo\", \"Ago James\", \"Michell Taiwo\", \"Abraham Jones\", \"Nicole Anide\", \"Kosi Korso\",\n",
+    "                  \"Adele Martins\", \"Emmanuel Ojo\", \"Ajayi Fatima\"]\n",
+    "\n",
+    "employee_database = Employees(employees_list)\n",
+    "\n",
+    "name = input(\"Enter a name: \")\n",
+    "if employee_database.check_employee(name):\n",
+    "    print(\"Name found in the database.\")\n",
+    "else:\n",
+    "    print(\"Name not found in the database.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
