--- a/Week_11/Week 11 - Encapsulation Practice.ipynb
+++ b/Week_11/Week 11 - Encapsulation Practice.ipynb
@@ -466,14 +466,26 @@
     "<b>Instructions:</b>\n",
     "    <ul><li>If the student age is greater than 14 and less than 18, create a .csv file for that category called <b>The_Pirates</b> and display it.</li><li>\n",
     "    If the student age is greater than 18 and less than 22, create a file for that category called <b>The_Yankees</b> and display it.</li><li>\n",
-    "    If the student age is greater than 22 create a file for that category called <b>The_Bulls</b> and display it.</li></ul>\n"
+    "33    If the student age is greater than 22 create a file for that category called <b>The_Bulls</b> and display it.</li></ul>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'name' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 45\u001b[0m\n\u001b[0;32m     43\u001b[0m             writer\u001b[38;5;241m.\u001b[39mwriterow([student\u001b[38;5;241m.\u001b[39mname, student\u001b[38;5;241m.\u001b[39mage, student\u001b[38;5;241m.\u001b[39mgrade])\n\u001b[0;32m     44\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfilename\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m created.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m---> 45\u001b[0m emp \u001b[38;5;241m=\u001b[39m Student(\u001b[43mname\u001b[49m, age, grade)\n\u001b[0;32m     46\u001b[0m \u001b[38;5;66;03m# Call the classify_students() function to start the classification process\u001b[39;00m\n\u001b[0;32m     47\u001b[0m emp\u001b[38;5;241m.\u001b[39mStudent()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'name' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import csv\n",
     "\n",
@@ -519,10 +531,17 @@
     "        for student in students:\n",
     "            writer.writerow([student.name, student.age, student.grade])\n",
     "    print(f'{filename} created.')\n",
-    "\n",
+    "emp = Student(name, age, grade)\n",
     "# Call the classify_students() function to start the classification process\n",
-    "classify_students()\n"
+    "emp.Student()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
