--- a/Week_12/Week 12 - Abstraction Practice.ipynb
+++ b/Week_12/Week 12 - Abstraction Practice.ipynb
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -739,6 +739,73 @@
     "    write_menu_to_csv(vendor, menu_items)\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'name' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 45\u001b[0m\n\u001b[0;32m     43\u001b[0m             writer\u001b[38;5;241m.\u001b[39mwriterow([student\u001b[38;5;241m.\u001b[39mname, student\u001b[38;5;241m.\u001b[39mage, student\u001b[38;5;241m.\u001b[39mgrade])\n\u001b[0;32m     44\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfilename\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m created.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m---> 45\u001b[0m emp \u001b[38;5;241m=\u001b[39m Student(\u001b[43mname\u001b[49m, age, grade)\n\u001b[0;32m     46\u001b[0m \u001b[38;5;66;03m# Call the classify_students() function to start the classification process\u001b[39;00m\n\u001b[0;32m     47\u001b[0m emp\u001b[38;5;241m.\u001b[39mStudent()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'name' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "\n",
+    "class Student:\n",
+    "    def __init__(self, name, age, grade):\n",
+    "        self.name = name\n",
+    "        self.age = int(age)\n",
+    "        self.grade = grade\n",
+    "\n",
+    "def classify_students():\n",
+    "    # Read data from the sis.csv file and create Student objects\n",
+    "    students = []\n",
+    "    with open('sis.csv', 'r') as file:\n",
+    "        reader = csv.reader(file)\n",
+    "        next(reader)  # Skip the header row\n",
+    "        for row in reader:\n",
+    "            name, age, grade = row\n",
+    "            student = Student(name, age, grade)\n",
+    "            students.append(student)\n",
+    "\n",
+    "    # Classify students based on their age into the appropriate categories\n",
+    "    pirates = []\n",
+    "    yankees = []\n",
+    "    bulls = []\n",
+    "    for student in students:\n",
+    "        if 14 < student.age < 18:\n",
+    "            pirates.append(student)\n",
+    "        elif 18 < student.age < 22:\n",
+    "            yankees.append(student)\n",
+    "        elif student.age > 22:\n",
+    "            bulls.append(student)\n",
+    "\n",
+    "    # Create and display separate CSV files for each category\n",
+    "    create_csv_file('The_Pirates', pirates)\n",
+    "    create_csv_file('The_Yankees', yankees)\n",
+    "    create_csv_file('The_Bulls', bulls)\n",
+    "\n",
+    "def create_csv_file(category, students):\n",
+    "    filename = f'{category}.csv'\n",
+    "    with open(filename, 'w', newline='') as file:\n",
+    "        writer = csv.writer(file)\n",
+    "        writer.writerow(['Name', 'Age', 'Grade'])\n",
+    "        for student in students:\n",
+    "            writer.writerow([student.name, student.age, student.grade])\n",
+    "    print(f'{filename} created.')\n",
+    "emp = Student(name, age, grade)\n",
+    "# Call the classify_students() function to start the classification process\n",
+    "emp.Student()\n"
    ]
   },
   {
