--- a/week_10/Untitled.ipynb
+++ b/week_10/Untitled.ipynb
@@ -84,10 +84,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "dd1ea764",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number of oranges you want: 19\n",
+      "You have successfully bought 19 oranges.\n",
+      "Total cost: N95\n"
+     ]
+    }
+   ],
    "source": [
     "class Purchase:\n",
     "    def __init__(self, stock):\n",
@@ -108,6 +118,14 @@
     "oranges_to_buy = int(input(\"Enter the number of oranges you want: \"))\n",
     "purchase.buy_oranges(oranges_to_buy)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87a46a7b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
