--- a/week_6/Week 6 - Python-Pandas-Practice.ipynb
+++ b/week_6/Week 6 - Python-Pandas-Practice.ipynb
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
        "3   Adele           Phd"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -808,6 +808,41 @@
     "\n",
     "You have been employed as an expert python developer to create a program to document the consumption categories of their products and brands. Using your knowledge of Pandas DataFrames develop the program that saves the list of products (export, segments and brands) in a .csv excel file.<br><br>\n",
     "Hint: save the filename as <font color=\"green\"><i>cadbury_market.csv</i></font>."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Product information saved to cadbury_market.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "data = {\n",
+    "    'Product': ['Cocoa Butter', 'Cocoa Cake', 'Cocoa Liquor', 'Cocoa Powder',\n",
+    "                'Bournvita', 'Hot Chocolate', 'Tom Tom', 'Buttermint'],\n",
+    "    'Segment': ['Intermediate Cocoa Products', 'Intermediate Cocoa Products',\n",
+    "                'Intermediate Cocoa Products', 'Intermediate Cocoa Products',\n",
+    "                'Refreshment Beverages', 'Refreshment Beverages',\n",
+    "                'Confectionery', 'Confectionery'],\n",
+    "    'Brand': ['COCOA BUTTER', 'COCOA CAKE', 'COCOA LIQUOR', 'COCOA POWDER',\n",
+    "              'CADBURY BOURNVITA', 'CADBURY 3-in-1 HOT CHOCOLATE',\n",
+    "              'TOMTOM CLASSIC', 'TOMTOM STRAWBERRY and BUTTERMINT']\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "filename = 'cadbury_market.csv'\n",
+    "df.to_csv(filename, index=False)\n",
+    "print(f\"Product information saved to {filename}\")\n"
    ]
   },
   {
