--- a/WEEK_9/Week 9 - Object Oriented Programming Practice.ipynb
+++ b/WEEK_9/Week 9 - Object Oriented Programming Practice.ipynb
@@ -221,16 +221,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "car.__init__() takes 4 positional arguments but 5 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 16\u001b[0m\n\u001b[0;32m     12\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcolor is\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolor )\n\u001b[0;32m     15\u001b[0m toyota \u001b[38;5;241m=\u001b[39m car(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mToyota Corolla\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mblue\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m2009\u001b[39m)\n\u001b[1;32m---> 16\u001b[0m kia \u001b[38;5;241m=\u001b[39m \u001b[43mcar\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mKia Cerato\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mgreen\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2020\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mAutomatic\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     18\u001b[0m toyota\u001b[38;5;241m.\u001b[39mshow() \u001b[38;5;66;03m# same output as car.show(toyota)\u001b[39;00m\n\u001b[0;32m     19\u001b[0m kia\u001b[38;5;241m.\u001b[39mshow()\n",
+      "\u001b[1;31mTypeError\u001b[0m: car.__init__() takes 4 positional arguments but 5 were given"
+     ]
+    }
+   ],
    "source": [
     "# Another example using SELF\n",
     "\n",
     "class car():\n",
     "\n",
     "    # init method or constructor\n",
-    "    def __init__(self, model, color):\n",
+    "    def __init__(self, name, model, color):\n",
     "        self.model = model\n",
     "        self.color = color\n",
     "\n",
@@ -330,14 +342,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello, my name is \n"
+      "Hello, my name is niimii\n"
      ]
     }
    ],
@@ -353,7 +365,7 @@
     "    def say_hi(self):\n",
     "        print('Hello, my name is', self.name)\n",
     "\n",
-    "p = Person('')\n",
+    "p = Person('niimii')\n",
     "p.say_hi()\n",
     "\n"
    ]
@@ -462,18 +474,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the first number: 5\n",
-      "Enter the second number: 7\n",
-      "First number = 5\n",
-      "Second number = 7\n",
-      "Addition of two numbers = 12\n"
+      "Enter the first number: 6\n",
+      "Enter the second number: 3\n",
+      "First number = 6\n",
+      "Second number = 3\n",
+      "Addition of two numbers = 9\n"
      ]
     }
    ],
@@ -563,9 +575,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the name of the first student: nimi\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'self' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 19\u001b[0m\n\u001b[0;32m     16\u001b[0m stud2 \u001b[38;5;241m=\u001b[39m SST(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnter the name of the second student: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     18\u001b[0m \u001b[38;5;66;03m# Accessing class methods\u001b[39;00m\n\u001b[1;32m---> 19\u001b[0m stud1\u001b[38;5;241m.\u001b[39mspeak(\u001b[38;5;28;43mself\u001b[39;49m)\n\u001b[0;32m     20\u001b[0m stud2\u001b[38;5;241m.\u001b[39mspeak()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'self' is not defined"
+     ]
+    }
+   ],
    "source": [
     "class SST:\n",
     "\n",
@@ -582,7 +613,7 @@
     "\n",
     "# Object instantiation\n",
     "stud1 = SST(input(\"Enter the name of the first student: \"))\n",
-    "stud2 = SST(\"Enter the name of the second student: \"))\n",
+    "stud2 = SST(\"Enter the name of the second student: \")\n",
     "\n",
     "# Accessing class methods\n",
     "stud1.speak(self)\n",
@@ -599,19 +630,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'bread' is not defined",
+     "ename": "TypeError",
+     "evalue": "Dog.__init__() missing 1 required positional argument: 'color'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 20\u001b[0m\n\u001b[0;32m     17\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolor \u001b[38;5;241m=\u001b[39m color\n\u001b[0;32m     19\u001b[0m \u001b[38;5;66;03m# Objects of Dog class\u001b[39;00m\n\u001b[1;32m---> 20\u001b[0m Rodger \u001b[38;5;241m=\u001b[39m \u001b[43mDog\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mPug\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mbrown\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     21\u001b[0m Buzo \u001b[38;5;241m=\u001b[39m Dogs(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBulldog\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mblack\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     23\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRodger details:\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[3], line 16\u001b[0m, in \u001b[0;36mDog.__init__\u001b[1;34m(self, breed, color)\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, breed, color):\n\u001b[0;32m     14\u001b[0m \n\u001b[0;32m     15\u001b[0m     \u001b[38;5;66;03m# Instance Variable\u001b[39;00m\n\u001b[1;32m---> 16\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbreed \u001b[38;5;241m=\u001b[39m \u001b[43mbread\u001b[49m\n\u001b[0;32m     17\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolor \u001b[38;5;241m=\u001b[39m color\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'bread' is not defined"
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 20\u001b[0m\n\u001b[0;32m     17\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolor \u001b[38;5;241m=\u001b[39m color\n\u001b[0;32m     19\u001b[0m \u001b[38;5;66;03m# Objects of Dog class\u001b[39;00m\n\u001b[1;32m---> 20\u001b[0m Rodger \u001b[38;5;241m=\u001b[39m \u001b[43mDog\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mPug, brown\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     21\u001b[0m Buzo \u001b[38;5;241m=\u001b[39m Dogs(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBulldog, black\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     23\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRodger details:\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: Dog.__init__() missing 1 required positional argument: 'color'"
      ]
     }
    ],
@@ -635,8 +665,8 @@
     "        self.color = color\n",
     "    \n",
     "# Objects of Dog class\n",
-    "Rodger = Dog(\"Pug\", \"brown\")\n",
-    "Buzo = Dogs(\"Bulldog\", \"black\")\n",
+    "Rodger = Dog(\"Pug, brown\")\n",
+    "Buzo = Dogs(\"Bulldog, black\")\n",
     "\n",
     "print('Rodger details:')\n",
     "print('Rodger is a', Rodger.aminal)\n",
@@ -743,15 +773,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Title: Neme\n",
-      "Name(Firstname Lastname): Sall\n"
+      "Title: nimi\n",
+      "Name(Firstname Lastname): Mary Evans\n"
      ]
     },
     {
@@ -761,8 +791,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[29], line 34\u001b[0m\n\u001b[0;32m     32\u001b[0m employees \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mName(Firstname Lastname): \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     33\u001b[0m a \u001b[38;5;241m=\u001b[39m Employees(employees, tasks, nameof_ppl)\n\u001b[1;32m---> 34\u001b[0m \u001b[43ma\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheck_employee\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnumber\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtitle\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[29], line 13\u001b[0m, in \u001b[0;36mEmployees.check_employee\u001b[1;34m(self, number, title)\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtitle \u001b[38;5;241m=\u001b[39m title\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(nameof_ppl)):\n\u001b[1;32m---> 13\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnameofppl \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43memployees\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m:\n\u001b[0;32m     14\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnumber \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnumber \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     15\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAccess granted\u001b[39m\u001b[38;5;124m'\u001b[39m);\n",
+      "Cell \u001b[1;32mIn[1], line 34\u001b[0m\n\u001b[0;32m     32\u001b[0m employees \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mName(Firstname Lastname): \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     33\u001b[0m a \u001b[38;5;241m=\u001b[39m Employees(employees, tasks, nameof_ppl)\n\u001b[1;32m---> 34\u001b[0m \u001b[43ma\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheck_employee\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnumber\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtitle\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[1], line 13\u001b[0m, in \u001b[0;36mEmployees.check_employee\u001b[1;34m(self, number, title)\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtitle \u001b[38;5;241m=\u001b[39m title\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(nameof_ppl)):\n\u001b[1;32m---> 13\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnameofppl \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43memployees\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m:\n\u001b[0;32m     14\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnumber \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnumber \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     15\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAccess granted\u001b[39m\u001b[38;5;124m'\u001b[39m);\n",
       "\u001b[1;31mIndexError\u001b[0m: string index out of range"
      ]
     }
@@ -808,15 +838,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a name:Jane Akibo \n",
-      "Access denied. Employee does not exist.\n"
+      "Enter a name:Mary Evans\n",
+      "Task assigned to Mary Evans: Loading\n"
      ]
     }
    ],
